fixing intellij warnings